--- a/index.html
+++ b/index.html
@@ -6,9 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 4:Homework</title>
 
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+
     <script src="js/index.js"></script>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="form-block">
+                <form>
+                    <input type="text" placeholder="Value One">
+
+                    <select>
+                        <p></p>
+                        <option>Plus</option>
+                        <option>Times</option>
+                        <option>Divide</option>
+                        <option>Minus</option>
+                    </select>
+
+                    <input type="text" placeholder="Value Two">
+
+                    <button class="btn-submit">Calculate</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    
     
 </body>
 </html>
